--- a/courses/index.Rmd
+++ b/courses/index.Rmd
@@ -5,9 +5,10 @@ layout: default
 
 ### Upcoming courses
 
-* [July 16 2016, Madison, Wisconsin, USA](./2016/madison/)
+No upcoming courses.
 
 ### Past courses
 
+* [July 16 2016, Madison, Wisconsin, USA](./2016/madison/)
 * [Aug 1 2015, Montpellier, France](./2015/montpellier/)
 * 2009, Edmonton, AB Canada.
